--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev --turbopack -p 3001",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -38,6 +38,7 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.4",
+		"@shopify/admin-api-client": "^1.0.4",
 		"@shopify/shopify-api": "^11.6.0",
 		"@shopify/storefront-api-client": "^1.0.3",
 		"@tailwindcss/typography": "^0.5.15",
@@ -48,6 +49,8 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.5.1",
+		"graphql": "^16.9.0",
+		"graphql-request": "^6.1.0",
 		"input-otp": "^1.4.1",
 		"lucide-react": "^0.460.0",
 		"next": "^15.0.4-canary.26",
