--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./*"],
+			"@/lib/*": ["./lib/*"],
+			"@/components/*": ["./components/*"],
+			"@/actions/*": ["./actions/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
