--- a/package.json
+++ b/package.json
@@ -1,81 +1,35 @@
 {
-	"name": "zugzology.com",
+	"name": "zugzology-store",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack -p 3001",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"clean": "rimraf .next .turbo node_modules package-lock.json yarn.lock bun.lockb"
+		"lint": "next lint"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.9.1",
-		"@radix-ui/react-accordion": "^1.2.1",
-		"@radix-ui/react-alert-dialog": "^1.1.2",
-		"@radix-ui/react-aspect-ratio": "^1.1.0",
-		"@radix-ui/react-avatar": "^1.1.1",
-		"@radix-ui/react-checkbox": "^1.1.2",
-		"@radix-ui/react-collapsible": "^1.1.1",
-		"@radix-ui/react-context-menu": "^2.2.2",
-		"@radix-ui/react-dialog": "^1.1.2",
-		"@radix-ui/react-dropdown-menu": "^2.1.2",
-		"@radix-ui/react-hover-card": "^1.1.2",
-		"@radix-ui/react-label": "^2.1.0",
-		"@radix-ui/react-menubar": "^1.1.2",
-		"@radix-ui/react-navigation-menu": "^1.2.1",
-		"@radix-ui/react-popover": "^1.1.2",
-		"@radix-ui/react-progress": "^1.1.0",
-		"@radix-ui/react-radio-group": "^1.2.1",
-		"@radix-ui/react-scroll-area": "^1.2.1",
-		"@radix-ui/react-select": "^2.1.2",
-		"@radix-ui/react-separator": "^1.1.0",
-		"@radix-ui/react-slider": "^1.2.1",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@radix-ui/react-switch": "^1.1.1",
-		"@radix-ui/react-tabs": "^1.1.1",
-		"@radix-ui/react-toast": "^1.2.2",
-		"@radix-ui/react-toggle": "^1.1.0",
-		"@radix-ui/react-toggle-group": "^1.1.0",
-		"@radix-ui/react-tooltip": "^1.1.4",
-		"@shopify/admin-api-client": "^1.0.4",
-		"@shopify/shopify-api": "^11.6.0",
-		"@shopify/storefront-api-client": "^1.0.3",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tanstack/react-query": "^5.61.3",
-		"@tanstack/react-query-devtools": "^5.61.0",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "1.0.0",
-		"date-fns": "^4.1.0",
-		"embla-carousel-react": "^8.5.1",
-		"graphql": "^16.9.0",
-		"graphql-request": "^6.1.0",
-		"input-otp": "^1.4.1",
-		"lucide-react": "^0.462.0",
-		"next": "^15.0.4-canary.26",
-		"next-themes": "^0.4.3",
-		"react": "^19.0.0-rc-c11c9510-20241120",
-		"react-day-picker": "8.10.1",
-		"react-dom": "^19.0.0-rc-c11c9510-20241120",
-		"react-hook-form": "^7.53.2",
-		"react-resizable-panels": "^2.1.7",
-		"recharts": "^2.13.3",
-		"sonner": "^1.7.0",
-		"tailwind-merge": "^2.5.4",
+		"@headlessui/react": "^1.7.17",
+		"@heroicons/react": "^2.0.18",
+		"@tanstack/react-query": "^5.8.4",
+		"clsx": "^2.0.0",
+		"lucide-react": "^0.292.0",
+		"next": "14.0.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"tailwind-merge": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
-		"vaul": "^1.1.1",
-		"zod": "^3.23.8",
-		"zustand": "^4.5.2"
+		"turbo": "^2.3.3"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.16",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"@types/node": "^20.9.1",
+		"@types/react": "^18.2.37",
+		"@types/react-dom": "^18.2.15",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.53.0",
+		"eslint-config-next": "14.0.3",
+		"postcss": "^8.4.31",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.2.2"
 	}
 }
