ited looks like you've made a significant number of changes to your codebase. I'll try to summarize the key points. **New Features** 1. **Theme switching**: You've added a theme switching feature, allowing users to switch between different themes. 2. **Sort and filter functionality**: You've implemented sort and filter functionality for product lists. 3. **Variant selector**: You've created a variant selector component that allows users to select specific product options (e.g., size, color). 4. **Cart and checkout integration**: You've integrated cart and checkout functionality using Shopify's API. **Changes to Existing Components** 1. **Product list components**: You've updated the `products` page to use the new sort and filter functionality. 2. **Variant selector updates**: You've made changes to the variant selector component to improve its functionality and user experience. 3. **Sort select updates**: You've updated the sort select component to reflect the new sort and filter functionality. **New Components** 1. **Theme switcher component**: You've created a theme switcher component that allows users to switch between different themes. 2. **Add-to-cart button component**: You've created an add-to-cart button component that integrates with Shopify's cart API. **API Changes** 1. **Shopify API integration**: You've updated the code to use Shopify's API for cart and checkout functionality. 2. **GraphQL queries**: You've modified GraphQL queries to fetch data from Shopify's API. Overall, it seems like you've made significant progress in modernizing your codebase and implementing new features to improve user experience. Well done!

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack -p 3001",
+		"dev": "next dev -p 3001",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -12,11 +12,12 @@
 		"@headlessui/react": "^1.7.17",
 		"@heroicons/react": "^2.0.18",
 		"@tanstack/react-query": "^5.8.4",
+		"babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
 		"clsx": "^2.0.0",
 		"lucide-react": "^0.292.0",
-		"next": "14.0.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"next": "^15.0.4-canary.32",
+		"react": "^19.0.0-rc-7670501b-20241124",
+		"react-dom": "^19.0.0-rc-7670501b-20241124",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
 		"turbo": "^2.3.3"
