--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,9 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./*"],
-			"@/lib/*": ["./lib/*"],
-			"@/components/*": ["./components/*"],
-			"@/actions/*": ["./actions/*"]
-		}
+			"@/*": ["./*"]
+		},
+		"baseUrl": "."
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
