--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev -p 3001",
+		"dev": "next dev --turbopack -p 3001",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -11,20 +11,58 @@
 	"dependencies": {
 		"@headlessui/react": "^1.7.17",
 		"@heroicons/react": "^2.0.18",
+		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
+		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-checkbox": "^1.1.2",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-context-menu": "^2.2.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-hover-card": "^1.1.2",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-menubar": "^1.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.2.1",
+		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slider": "^1.2.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.4",
+		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.8.4",
 		"babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.0.0",
-		"lucide-react": "^0.292.0",
-<<<<<<< HEAD
-		"next": "^15.0.4-canary.31",
-=======
+		"cmdk": "1.0.0",
+		"date-fns": "^4.1.0",
+		"embla-carousel-react": "^8.5.1",
+		"input-otp": "^1.4.1",
+		"lucide-react": "^0.462.0",
 		"next": "^15.0.4-canary.32",
->>>>>>> fae339299d7c36f74097585aff30db77f2e11300
+		"next-themes": "^0.4.3",
 		"react": "^19.0.0-rc-7670501b-20241124",
+		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0-rc-7670501b-20241124",
+		"react-hook-form": "^7.53.2",
+		"react-resizable-panels": "^2.1.7",
+		"recharts": "^2.13.3",
+		"sonner": "^1.7.0",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
-		"turbo": "^2.3.3"
+		"turbo": "^2.3.3",
+		"vaul": "^1.1.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "^20.9.1",
