--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+	"cache": false,
+	"extends": ["next/core-web-vitals", "next/typescript"]
 }
