--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"embla-carousel-react": "^8.5.1",
 		"input-otp": "^1.4.1",
 		"lucide-react": "^0.462.0",
+		"nanoid": "^5.0.9",
 		"next": "^15.0.4-canary.32",
 		"next-themes": "^0.4.3",
 		"react": "^19.0.0-rc-7670501b-20241124",
