--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
 		"clsx": "^2.0.0",
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
+		"embla-carousel-autoplay": "^8.5.2",
 		"embla-carousel-react": "^8.5.1",
+		"framer-motion": "^12.4.1",
 		"input-otp": "^1.4.1",
 		"lucide-react": "^0.462.0",
 		"nanoid": "^5.0.9",
@@ -62,7 +64,7 @@
 		"react-resizable-panels": "^2.1.7",
 		"react-scan": "^0.0.45",
 		"recharts": "^2.13.3",
-		"sonner": "^1.7.0",
+		"sonner": "^1.7.4",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
 		"turbo": "^2.3.3",
