--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"nanoid": "^5.0.9",
 		"next": "^15.0.4-canary.32",
 		"next-themes": "^0.4.3",
+		"nuqs": "^2.3.2",
 		"react": "^19.0.0-rc-7670501b-20241124",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0-rc-7670501b-20241124",
