--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@tanstack/react-query": "^5.8.4",
 		"@tanstack/react-virtual": "^3.11.1",
 		"@tanstack/virtual-core": "^3.10.9",
+		"@types/js-cookie": "^3.0.6",
 		"babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.0.0",
@@ -53,19 +54,23 @@
 		"embla-carousel-react": "^8.5.1",
 		"framer-motion": "^12.4.1",
 		"input-otp": "^1.4.1",
+		"js-cookie": "^3.0.5",
+		"linkedom": "^0.18.9",
 		"lucide-react": "^0.462.0",
 		"nanoid": "^5.0.9",
-		"next": "^15.0.4-canary.32",
+		"next": "^15.2.0-canary.62",
 		"next-themes": "^0.4.3",
 		"nuqs": "^2.3.2",
-		"react": "^19.0.0-rc-7670501b-20241124",
+		"react": "^19.1.0-canary-e670e72f-20250214",
 		"react-day-picker": "8.10.1",
-		"react-dom": "^19.0.0-rc-7670501b-20241124",
+		"react-dom": "^19.1.0-canary-e670e72f-20250214",
 		"react-error-boundary": "^5.0.0",
 		"react-hook-form": "^7.53.2",
 		"react-resizable-panels": "^2.1.7",
 		"react-scan": "^0.0.45",
+		"react-schemaorg": "^2.0.0",
 		"recharts": "^2.13.3",
+		"schema-dts": "^1.1.2",
 		"sonner": "^1.7.4",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
