--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@tanstack/react-virtual": "^3.11.1",
 		"@tanstack/virtual-core": "^3.10.9",
 		"@types/js-cookie": "^3.0.6",
+		"@vercel/kv": "^3.0.0",
 		"babel-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.0.0",
