--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.17.15",
 		"@types/node": "^20.9.1",
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
