--- a/package.json
+++ b/package.json
@@ -67,8 +67,9 @@
 		"react-dom": "^19.1.0-canary-e670e72f-20250214",
 		"react-error-boundary": "^5.0.0",
 		"react-hook-form": "^7.53.2",
+		"react-intersection-observer": "^9.15.1",
 		"react-resizable-panels": "^2.1.7",
-		"react-scan": "^0.0.45",
+		"react-scan": "^0.1.3",
 		"react-schemaorg": "^2.0.0",
 		"recharts": "^2.13.3",
 		"schema-dts": "^1.1.2",
