--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"lucide-react": "^0.462.0",
 		"nanoid": "^5.0.9",
 		"next": "^15.2.0-canary.62",
+		"next-auth": "^5.0.0-beta.25",
 		"next-themes": "^0.4.3",
 		"nuqs": "^2.3.2",
 		"react": "^19.1.0-canary-e670e72f-20250214",
