--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack -p 3001",
+		"dev": "next dev -p 3000",
+		"dev:turbo": "next dev --turbopack -p 3000",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"scan": "next dev -p 3001 & npx react-scan@latest localhost:3001"
+		"scan": "next dev -p 3000 & npx react-scan@latest localhost:3000",
+		"dev:node": "next dev -p 3003"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.17",
@@ -60,7 +62,7 @@
 		"lucide-react": "^0.462.0",
 		"nanoid": "^5.0.9",
 		"next": "^15.2.0-canary.62",
-		"next-auth": "^5.0.0-beta.25",
+		"next-auth": "^4.24.11",
 		"next-themes": "^0.4.3",
 		"nuqs": "^2.3.2",
 		"react": "^19.1.0-canary-e670e72f-20250214",
