--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p 3000",
-    "dev:legacy": "next dev -p 3000",
+    "dev": "next dev --turbo",
+    "dev:legacy": "next dev",
     "build": "next build --turbo",
     "build:legacy": "next build",
     "build:analyze": "ANALYZE=true next build --turbo",
@@ -13,7 +13,7 @@
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
     "type-check": "tsc --noEmit",
-    "scan": "next dev --turbo -p 3000 & npx react-scan@latest localhost:3000",
+    "scan": "next dev --turbo & npx react-scan@latest localhost:3000",
     "dev:node": "next dev --turbo -p 3003",
     "clean": "rm -rf .next node_modules/.cache",
     "knip": "knip",
